Fix issue with scrollbar in messages when not hovering

--- a/client/src/components/Chat/ChatView/MessageContainer/Messages/Messages.css
+++ b/client/src/components/Chat/ChatView/MessageContainer/Messages/Messages.css
@@ -11,20 +11,22 @@
 
 .Messages::-webkit-scrollbar-track
 {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0);
+	-webkit-box-shadow: inset 0 0 0px #FFFFFF;
 	border-radius: 10px;
+	background-color: #FFFFFF;
 }
 
 .Messages::-webkit-scrollbar
 {
 	width: 10px;
+	background-color: #FFFFFF;
 }
 
 .Messages::-webkit-scrollbar-thumb
 {
 	border-radius: 10px;
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.0);
-	background-color: rgba(102, 102, 102, 0.0);
+	-webkit-box-shadow: inset 0 0 0px #FFFFFF;
+	background-color: #FFFFFF;
 }
 
 .Messages:hover {
